<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />

<!--        My Navigations-->
        <item
            android:id="@+id/nav_myProfile"
            android:icon="@drawable/baseline_account_circle_24"
            android:title="@string/menu_myprofile" />
        <item
            android:id="@+id/nav_myBookings"
            android:icon="@drawable/book"
            android:title="@string/menu_mybokkings" />
        <item
            android:id="@+id/nav_MyAction"
            android:icon="@drawable/activity"
            android:title="@string/Action_menu" />
    </group>
</menu>